--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap-select.css" rel="stylesheet">
     <link href="css/bootstrap-table.css" rel="stylesheet">
     <link href="css/bootstrap-editable.css" rel="stylesheet">
+    <script src="js/reconnecting-websocket.min.js" ></script>
     <script src="js/jquery-1.11.2.min.js" ></script>
     <script src="js/jquery.pagination-1.2.7.min.js" ></script>
     <script src="js/bootstrap.js" ></script>
@@ -52,6 +53,15 @@
                             <a onclick="changeHtml()" role="button" data-toggle="collapse" data-parent="#accordion" href="#zlIndex"
                                aria-expanded="true" aria-controls="collapseOne">
                                 调度指令
+                            </a>
+                        </h4>
+                    </div>
+                </div>
+                <div class="panel panel-default text-center" style="margin-top: 20px;">
+                    <div class="panel-heading" role="tab" id="">
+                        <h4 class="panel-title">
+                            <a onclick="changeHtml()" role="button" data-toggle="collapse" data-parent="#accordion" href="#fzmn">
+                                仿真模拟
                             </a>
                         </h4>
                     </div>
